<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/diagnoseFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_diagnose" />

    <item
        android:id="@+id/scanFragment"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_scan" />

    <item
        android:id="@+id/collectionFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_collection" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chat" />
</menu>